feat: harden demo workflows and refresh showcase assets